--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vue Hello</title>
 </head>
 <body>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
 </html>
