--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Vue Hello</title>
 </head>
 <body>
+    <div>
+        <h1 id="app"> {{ message }} </h1>
+    </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
