--- a/bonus/index.html
+++ b/bonus/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Vue Hello</title>
 </head>
 <body>
     <div>
         <h1 id="app"> {{ message }} </h1>
+        <img :src="img" :alt="name">
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
