--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,8 +7,8 @@
     <title>Vue Hello</title>
 </head>
 <body>
-    <div>
-        <h1 id="app"> {{ message }} </h1>
+    <div  id="app">
+        <h1> {{ message }} </h1>
         <img :src="img" :alt="name">
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
